# s3get

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: main.rs
