[package]
name = "s3get"
version = "0.3.3"
edition = "2021"
license = "MIT"
keywords = ["aws","s3"]
description = "Download a single file from S3 using chunks"
homepage = "https://github.com/VeaaC/s3get"
repository = "https://github.com/VeaaC/s3get"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.68"
crossbeam = "0.8.2"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
futures = "0.3.25"
num_cpus = "1.15.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "fs", "sync"] }
http = "0.2.8"
